# types-jieba

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish.yaml
jieba-stubs/: __init__.pyi  _compat.pyi
jieba-stubs/analyse/: __init__.pyi  textrank.pyi  tfidf.pyi
jieba-stubs/posseg/: __init__.pyi  char_state_tab.pyi  prob_emit.pyi  prob_start.pyi  prob_trans.pyi  viterbi.pyi
