[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "types-jieba"
authors = [{ name = "thep0y", email = "thepoy@163.com" }]
description = "jieba 类型库"
readme = "README.md"
requires-python = ">=3"
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]
keywords = ["jieba", "中文", "分词", "类型"]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/thep0y/types-jieba"
repository = "https://github.com/thep0y/types-jieba"

[tool.setuptools]
packages = ["jieba-stubs"]
include-package-data = true

[tool.setuptools_scm]
